--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 
 
-  <span class= "nevbar">
+  <span class= "navbar">
     <div class="a">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
   <a class="navbar-brand" href="#">Shri Ram Healthcare</a>
@@ -168,7 +168,7 @@
 
 <!-- Footer -->
 
-<span class= "nevbar">
+<span class= "navbar">
     <div class="a">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
   <a class="navbar-brand" href="#">Shri Ram Healthcare</a>
